# desktop-llm

./: .env.example  .gitignore  config.json  config.py  environment.yml  logger.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py
.github/workflows/: python-tests.yml
app/: main.py  ner_utils.py
app/context/: llm_context.py
app/core/: config.py  mcp_config.py  service_locator.py
app/dependencies/: providers.py
app/functions/: __init__.py  base.py  chat.py  config.json  executor.py  filters.py  registry.py  utils.py
chroma_data/: chroma.sqlite3
light_rag_data/: graph_chunk_entity_relation.graphml  kv_store_full_docs.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  memory_relations.db  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
lightrag/: graph_chunk_entity_relation.graphml  kv_store_full_docs.json  kv_store_text_chunks.json  memory.db  vdb_chunks.json  vdb_entities.json
stories/: ARCHITECTURE.md  Context_management_revamp.md  chroma_revamp.md  function_development.md  functions_revamp.md  lightrag.md  long_term_memory.md  mcp_docs.md  mcp_integration.md  mcp_todos.md  memory_architecture.md  memory_architecture_3.md  memory_migration.md  memory_migration_2.md  memory_migration_3.md  memory_pipeline.md  todos.md
streaming/: __init__.py  processor.py  sse.py  stream_config.py  stream_processor.py
tests/: README.md  conftest.py  test.txt  test_agent.py  test_chat_streaming.py  test_config.json  test_function_imports.py  test_functions.py  test_mcp_client.py  test_server_endpoints.py
(+68 files in other folders)
